Nextcloud/deployment-nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: docker.io/nextcloud:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nextcloud-html
              mountPath: /var/www/html
            - name: nextcloud-data
              mountPath: /var/www/html/data
            - name: nextcloud-config
              mountPath: /var/www/html/config/custom.config.php
              subPath: custom.config.php
          startupProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: cloud.foerst.haus
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: cloud.foerst.haus
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: cloud.foerst.haus
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 2Gi
        - name: cron
          image: docker.io/nextcloud:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 33 # www-data
            runAsGroup: 33
          command:
            - /bin/sh
            - -c
            - |
              while true; do
                php /var/www/html/cron.php
                sleep 300
              done
          volumeMounts:
            - name: nextcloud-html
              mountPath: /var/www/html
            - name: nextcloud-data
              mountPath: /var/www/html/data
            - name: nextcloud-config
              mountPath: /var/www/html/config/custom.config.php
              subPath: custom.config.php
      volumes:
        - name: nextcloud-config
          configMap:
            name: nextcloud-config
        - name: nextcloud-html
          persistentVolumeClaim:
            claimName: nextcloud-html
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
